--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -34,20 +34,20 @@
             Next, go back to Visual Code Studio and select “Open Folder” and select the folder you just made.
         </p>
 
-        <img src="images/image2.png" alt="Open Folder">
+        <img src="HTMLCSS Images/image2.png" alt="Open Folder">
 
         <hr class="hr-1">
         <p>
             Now, add a new file to the folder from Visual Code Studio:
         </p>
 
-        <img src="images/image7.png" alt="Add File">
+        <img src="HTMLCSS Images/image7.png" alt="Add File">
         
         <p>
             Name the file “index.html” which will allow Visual Code Studio to realize the language of code you are writing in which  is html.           
         </p>
 
-        <img src="images/image4.png" alt="Name File">
+        <img src="HTMLCSS Images/image4.png" alt="Name File">
 
         <p>
             HTML is a very straightforward coding language where each item on the website that you want to be seen has its own unique “tag.” However, to begin coding in HTML the first line of code must be <!DOCTYPE html> in order to let your computer browser know that it needs to interpret the HTML coding language. 
