--- a/htmlcss/html+css3.html
+++ b/htmlcss/html+css3.html
@@ -88,7 +88,7 @@ And this is the code for it:
 <code>}</code>
 <code></code>
 <code>footer {</code>
-<code>	bckground: rgb(0, 140, 255);</code>
+<code>background: rgb(0, 140, 255);</code>
 <code></code>
 <code>}</code>
 </pre>
@@ -119,8 +119,8 @@ Now we will space out the layout correctly using the CSS tags margin and padding
 <code>}</code>
 <code></code>
 <code>footer {</code>
-<code>	bckground: rgb(0, 140, 255);</code>
-<code>	padding: 30px;</code>
+<code>background: rgb(0, 140, 255);</code>
+<code>padding: 30px;</code>
 <code></code>
 <code>}</code>
 </pre>
