--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -163,7 +163,7 @@
             
           </pre>
     </section>
-        <img src="HTMLCSS Images/image6lesson2.png" alt="Color">
+        <img src="htmlcss/HTMLCSS Images/image6lesson2.png" alt="Color">
         <p>
           After writing a line of CSS, it is important to use a semicolon ( ; ) which allows the browser to know that you are writing different lines of code. 
         </p>
@@ -174,7 +174,7 @@
         <p>
           Following this, many a list of many different fonts should come up:
         </p>
-        <img src="HTMLCSS Images/image3lesson2.png" alt="Font">
+        <img src="htmlcss/HTMLCSS Images/image3lesson2.png" alt="Font">
         <p>
           Click on the one that you like best! 
         </p>
@@ -190,7 +190,7 @@
         <p>
           This is how mine came out so far! 
         </p>
-        <img src="HTMLCSS Images/image4lesson2.png" alt="Webpage">
+        <img src="htmlcss/HTMLCSS Images/image4lesson2.png" alt="Webpage">
         <p>
           Here is my code:
         </p>
