--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -234,8 +234,8 @@
 
 
     <section class="next-previous-wrapper">
-        <a href="html-course-landing-page.html">&lt; Previous</a>
-        <a href="html+css2.html">Next &gt;</a>
+        <a href="html+css1.html">&lt; Previous</a>
+        <a href="html+css3.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
