--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -143,7 +143,7 @@
     <p>
       Now, you should have your very own basic webpage!
     </p>    
-    <img src="images/imgage1.png" alt="HTML Document">
+    <img src="images/image1.png" alt="HTML Document">
 
         
 
