--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -22,7 +22,7 @@
     <section class="section-1">
         <h1>HTML + CSS - Lesson 6/h1>
         <hr class="hr-1">
-        <h2>Add Webpages</h2>
+        <h2>Adding Webpages</h2>
         <p>
 In this lesson we will be linking our home page to other pages and learning how to code multiple webpages at once. 
 
