--- a/htmlcss/html-course-landing-page.html
+++ b/htmlcss/html-course-landing-page.html
@@ -78,7 +78,7 @@
     </section>
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="#">Next &gt;</a>
+        <a href="html+css1.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
