--- a/java/Lesson9.html
+++ b/java/Lesson9.html
@@ -26,7 +26,7 @@
         </h1>
         <p>
             <!-- Info on your lesson. Copy and paste from folder or nextenstem.co under your section -->
-          In this lesson, we will creating a calculator program, and creating graphical user interfaces (GUIs)
+          In this lesson, we will creating a calculator program, and creating graphical user interfaces (GUIs).
         </p>
     </section>
 
