--- a/htmlcss/html+css5.html
+++ b/htmlcss/html+css5.html
@@ -133,7 +133,7 @@ Place this under your body tag:
 <pre>
 
 <code><body></code>
-<code>  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"></code>
+<code>  &lt;link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"></code>
 <code></code>
 </pre>
 
@@ -183,12 +183,12 @@ Here is what I did:
 <pre>
 
 <code><style></code>
-<code>  body {</code>
-<code>  	font-family: 'Montserrat', 'sans-serif';</code>
-<code>    color: white;</code>
-<code>    text-align: center;</code>
-<code>    background: rgb(19, 60, 121);</code>
-<code>  }</code>
+<code> &lt; body {</code>
+<code> &lt; 	font-family: 'Montserrat', 'sans-serif';</code>
+<code> &lt;   color: white;</code>
+<code> &lt;   text-align: center;</code>
+<code> &lt;   background: rgb(19, 60, 121);</code>
+<code> &lt; }</code>
 </pre>
 
 </section>
