--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -35,6 +35,7 @@ First, we will be adding more buttons and learning to animate them.
 In regards to adding buttons, we learned this in a previous lesson. Under the first < button > < /button > tag, you can simply add to more <button> < /button > tags.
 
         </p>
+        
         <p>
 I called the other two buttons “Photos” and “About Me” 
         </p>
@@ -42,18 +43,14 @@ I called the other two buttons “Photos” and “About Me”
 
 <pre>
 
-<code><button>My Blog</code>
-<code><button>Photos</code>
-<code><button>About Me</code>
+<code>&lt;<button>My Blog</code>
+<code>&lt;<button>Photos</code>
+<code>&lt;<button>About Me</code>
 </pre>
 
 </section>
 
-<p>
-When using CSS to style the buttons, as they are all called “button” the CSS button code will edit all the buttons. 
-
-
-</p>
+<p> When using CSS to style the buttons, as they are all called “button” the CSS button code will edit all the buttons. </p>
 <p>
 However, unique from the previous lesson, I added a border: 
 
