--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -20,7 +20,7 @@
     </nav>
 
     <section class="section-1">
-        <h1>HTML + CSS - Lesson 7/h1>
+        <h1>HTML + CSS - Lesson 7</h1>
         <hr class="hr-1">
         <h2>Classifying and Styling</h2>
         <p>
@@ -70,7 +70,7 @@ The code should now look like this:
 
 <pre>
 
-<code><a href="index.html">Home</code>
+<code>&lt;a href="index.html">Home</code>
 <code></code>
 </pre>
 
@@ -104,7 +104,7 @@ Therefore, we need to create a section tag and follow the same steps as we did e
 
 <pre>
 
-<code><section class="blog">Blog Post 1</code>
+<code>&lt;section class="blog">Blog Post 1</code>
 <code></code>
 </pre>
 
@@ -147,9 +147,9 @@ To add more blog posts, simply go to the myblog.html file and copy and paste the
 
 <pre>
 
-<code><section class="blog">Blog Post 3</code>
-<code><section class="blog">Blog Post 2</code>
-<code><section class="blog">Blog Post 1</code>
+<code>&lt;section class="blog">Blog Post 3</code>
+<code>&lt;section class="blog">Blog Post 2</code>
+<code>&lt;section class="blog">Blog Post 1</code>
 </pre>
 
 </section>
@@ -179,9 +179,9 @@ Just as before, there are simple things that we should take care of, such as rem
 
 <pre>
 
-<code><a href="index.html">Home</code>
-<code><a href="photos.html">Photos</code>
-<code><a href="aboutme.html">About Me</code>
+<code>&lt;a href="index.html">Home</code>
+<code>&lt;a href="photos.html">Photos</code>
+<code>&lt;a href="aboutme.html">About Me</code>
 </pre>
 
 </section>
@@ -224,9 +224,9 @@ The following lines of code can be copied and repeated for every image you wish 
 <pre>
 
 <code><div class="column"></code>
-<code>            <div class="content"></code>
-<code>              <img src="rocketship.jpg" style="width:100%"></code>
-<code>              <p class ="photos">Image Description
+<code>&lt;div class="content"></code>
+<code> &lt;<img src="rocketship.jpg" style="width:100%"></code>
+<code> &lt;<p class ="photos">Image Description
 </code>
 <code>            </div></code>
 </pre>
@@ -401,8 +401,16 @@ Here is the code for the website:
 
 
 
+<p>
 
+</P>
 
+<p>
+
+</P>
+<p>
+
+</P>
 
 
 
