--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -105,7 +105,7 @@ To link the buttons to the other pages.
 
 <pre>
 
-<code><a href =“webpage.html”>My Blog</code>
+<code>&lt;a href =“webpage.html”>My Blog</code>
 </pre>
 
 </section>
