--- a/htmlcss/html+css5.html
+++ b/htmlcss/html+css5.html
@@ -182,7 +182,7 @@ Here is what I did:
 
 <pre>
 
-<code><style></code>
+<code>&lt;style></code>
 <code> &lt; body {</code>
 <code> &lt; 	font-family: 'Montserrat', 'sans-serif';</code>
 <code> &lt;   color: white;</code>
