--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -20,9 +20,9 @@
     </nav>
 
     <section class="section-1">
-        <h1>HTML + CSS - Lesson 4</h1>
-        <hr class="hr-1">
-        <h2>Linking Pages and Buttons</h2>
+        <h1>&lt;HTML + CSS - Lesson 4</h1>
+        <hr>&lt; class="hr-1">
+        <h2>&lt;Linking Pages and Buttons</h2>
         <p>
 In this lesson we continue working on the “Home” webpage by using CSS and HTML and laying out the ability to link separate web pages with more buttons. We will also learn how to animate buttons. 
 
