--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -105,7 +105,7 @@ To link the buttons to the other pages.
 
 <pre>
 
-<code>&lt;a href =“webpage.html”>My Blog</code>
+<code> &lt;a href =“webpage.html”>My Blog &lt;/code>
 </pre>
 
 </section>
@@ -124,31 +124,31 @@ So, the code looks like this:
 
 <pre>
 
-<code><!DOCTYPE html></code>
-<code><html></code>
-<code>    <link rel="stylesheet" href="style.css"></code>
-<code>    <head></code>
-<code>        <title></code>
+<code>&lt;!DOCTYPE html></code>
+<code>&lt;html></code>
+<code>    &lt;link rel="stylesheet" href="style.css"></code>
+<code>    &lt;head></code>
+<code>        &lt;title></code>
 <code>            Your Website Name!</code>
-<code>        </title> </code>
-<code>    </head>      </code>
-<code>    <body></code>
-<code>        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"></code>
-<code>        <h1>Website Name</code>
-<code>        <h2> </code>
-<code>            <nav></code>
-<code>                <ul></code>
-<code>                    <a href="myblog.html">My Blog</code>
-<code>                    <a href="photos.html">Photos</code>
-<code>                    <a href="aboutme.html">About Me</code>
-<code>                </ul></code>
-<code>            </nav>               </code>
-<code>        </h2></code>
-<code>        <p class="home">Website Name
+<code>        &lt;/title> </code>
+<code>    &lt;/head>      </code>
+<code>    &lt;body></code>
+<code>        &lt;link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"></code>
+<code>        &lt;h1>Website Name</code>
+<code>        &lt;h2> </code>
+<code>            &lt;nav></code>
+<code>                &lt;ul></code>
+<code>                    &lt;a href="myblog.html">My Blog</code>
+<code>                    &lt;a href="photos.html">Photos</code>
+<code>                    &lt;a href="aboutme.html">About Me</code>
+<code>                &lt;/ul></code>
+<code>            &lt;/nav>               </code>
+<code>        &lt;/h2></code>
+<code>        &lt;p class="home">Website Name
 </code>
-<code>        <section>Welcome to my website, I will be sharing...</code>
-<code>    </body></code>
-<code></html></code>
+<code>        &lt;section>Welcome to my website, I will be sharing...</code>
+<code>    &lt;/body></code>
+<code>&lt;/html></code>
 </pre>
 
 </section>
