--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -125,8 +125,8 @@ Here is how the button looks without and with the animation effect:
 
 </p>
 
-        <img src="htmlcss/HTMLCSS Images/lesson4p1.png" alt="Buttons Without Animation">
-        <img src="htmlcss/HTMLCSS Images/lesson4p2.png" alt="Buttons With Animations">
+        <img src="HTMLCSSImages/lesson4p1.png" alt="Buttons Without Animation">
+        <img src="HTMLCSSImages/lesson4p2.png" alt="Buttons With Animations">
 
 
     <section class="next-previous-wrapper">
