--- a/htmlcss/html+css5.html
+++ b/htmlcss/html+css5.html
@@ -92,7 +92,7 @@ Here’s the code and the image I chose to use:
 
 </section>
 
-<img src="htmlcss/HTMLCSS Images/space.png" alt="Space Background">
+<img src="HTMLCSSImages/space.png" alt="Space Background">
 
 <p>
 With the galaxy background image that I chose, I noticed that the current font style does not achieve the feel of the website that I am trying to create. (Of course, the following steps are up to you! Again, design your website how you see fit!) 
@@ -116,13 +116,13 @@ Once I found my desired font, I pressed “Select this style.”
 </p>
 
 
-<img src="htmlcss/HTMLCSS Images/gf2.png" alt="Select this Style">
+<img src="HTMLCSSImages/gf2.png" alt="Select this Style">
 
 <p>
 Then, press “Embed” and select “Link."
 </p>
 
-<img src="htmlcss/HTMLCSS Images/gf3.png" alt="Link Font">
+<img src="HTMLCSSImages/gf3.png" alt="Link Font">
 
 
 <p>
@@ -157,7 +157,7 @@ Now, we can go back to the line of CSS code that we worked on in a previous less
 and paste the labeled CSS code on the Google Fonts website: 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/gf1.png" alt="Link Font">
+<img src="HTMLCSSImages/gf1.png" alt="Link Font">
 
 <p>
 </p>
@@ -270,7 +270,7 @@ Now let’s see how this part of our website looks!
 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/space 3.png" alt="Text on Image">
+<img src="HTMLCSSImages/space 3.png" alt="Text on Image">
 
 
 <p>
@@ -321,7 +321,7 @@ Of course style your website as you see fit and feel free to add or delete eleme
 Here is how my webpage looks like:
 </p>
 
-<img src="htmlcss/HTMLCSS Images/space2.png" alt="Home Page">
+<img src="HTMLCSSImages/space2.png" alt="Home Page">
 
     <section class="next-previous-wrapper">
         <a href="html+css4.html">&lt; Previous</a>
