--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -47,7 +47,7 @@ To do this in the brackets software click File → NewFile
 
         </p>
 
-<img src="htmlcss/HTMLCSS Images/image6_6.png" alt="New File">
+<img src="HTMLCSSImages/image6_6.png" alt="New File">
 
 
 <p>
@@ -56,7 +56,7 @@ Once you do that there should be a file called “Untitled,” right click on it
 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/image3_6.png" alt="Save As">
+<img src="HTMLCSSImages/image3_6.png" alt="Save As">
 
 <p>
 Save this file as the name of the button .html. For example: myblog.html 
@@ -73,7 +73,7 @@ This is how your files should look in Visual Code Studio:
 
 
 </p>
-<img src="htmlcss/HTMLCSS Images/image5_6.png" alt="Files">
+<img src="HTMLCSSImages/image5_6.png" alt="Files">
 
 
 
@@ -188,7 +188,7 @@ Now let’s see how this part of our website looks!
 
 
 </p>
-<img src="htmlcss/HTMLCSS Images/image4_6.png" alt="File">
+<img src="HTMLCSSImages/image4_6.png" alt="File">
 <p>
 The reason for this is because there is no code in the other files we made earlier in this lesson.
 
@@ -331,7 +331,7 @@ For example, after clicking the “My Blog” button my search bar displayed:
 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/lesson6.png" alt="File">
+<img src="HTMLCSSImages/lesson6.png" alt="File">
 
 
 <p>
