--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -50,7 +50,7 @@ With the myblog.html file, we should begin by removing the header that currently
 
         </p>
 
-<img src="htmlcss/HTMLCSS Images/image6_6.png" alt="New File">
+<img src="HTMLCSSImages/image6_6.png" alt="New File">
 
 
 <p>
@@ -83,7 +83,7 @@ The code should now look like this:
 Now we have a home button! 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/7image9.png" alt="Space Background">
+<img src="HTMLCSSImages/7image9.png" alt="Space Background">
 
 
 <p>
@@ -161,7 +161,7 @@ This is how the blog looks!
 
 
 </p>
-<img src="htmlcss/HTMLCSS Images/7image11.png" alt="New File">
+<img src="HTMLCSSImages/7image11.png" alt="New File">
 
 
 
@@ -341,7 +341,7 @@ Finally, we are going to edit the paragraph font:
 
 </p>
 
-<img src="htmlcss/HTMLCSS Images/7image10.png" alt="New File">
+<img src="HTMLCSSImages/7image10.png" alt="New File">
 
 
 <p>
