--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -208,8 +208,8 @@ The following lines of code can be copied and repeated for every image you wish 
 
 <pre>
 
-<code><div class="webpage"></code>
-<code>        <div class="row"></code>
+<code>&it;div class="webpage"></code>
+<code>        &it;div class="row"></code>
 </pre>
 
 </section>
@@ -223,12 +223,12 @@ The following lines of code can be copied and repeated for every image you wish 
 
 <pre>
 
-<code><div class="column"></code>
+<code>&it;div class="column"></code>
 <code>&lt;div class="content"></code>
-<code> &lt;<img src="rocketship.jpg" style="width:100%"></code>
-<code> &lt;<p class ="photos">Image Description
+<code> &lt;img src="rocketship.jpg" style="width:100%"></code>
+<code> &lt;p class ="photos">Image Description
 </code>
-<code>            </div></code>
+<code>            &it;/div></code>
 </pre>
 
 </section>
