--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -38,24 +38,24 @@
     </p>
     <section class="code">
       <pre>
-            <code>&lt;!DOCTYPE html></code>
-            <code>  &lt;html></code>
-            <code>    &lt;head></code>
-            <code>      &lt;title></code>
-            <code>         Your Website Name!</code>
-            <code>      &lt;/title></code>
-            <code>    &lt;/head></code>
-            <code>    &lt;body></code>
-            <code>      &lt;h1></code>
-            <code>         Website Name</code>
-            <code>      &lt;/h1></code>
-            <code>      &lt;p></code>
-            <code>         &lt;b></code>
-            <code>           Welcome to my website! On this website I will be sharing____</code>
-            <code>         &lt;/b></code>
-            <code>      &lt;/p></code>
-            <code>    &lt;/body></code>
-            <code>  &lt;/html></code>
+    <code>&lt;!DOCTYPE html></code>
+    <code>  &lt;html></code>
+    <code>    &lt;head></code>
+    <code>      &lt;title></code>
+    <code>         Your Website Name!</code>
+    <code>      &lt;/title></code>
+    <code>    &lt;/head></code>
+    <code>    &lt;body></code>
+    <code>      &lt;h1></code>
+    <code>         Website Name</code>
+    <code>      &lt;/h1></code>
+    <code>      &lt;p></code>
+    <code>         &lt;b></code>
+    <code>           Welcome to my website! On this website I will be sharing____</code>
+    <code>         &lt;/b></code>
+    <code>      &lt;/p></code>
+    <code>    &lt;/body></code>
+    <code>  &lt;/html></code>
           </pre>
     </section>
 
@@ -69,30 +69,30 @@
     </p>
     <section class="code">
       <pre>
-            <code>&lt;!DOCTYPE html></code>
-            <code>  &lt;html></code>
-            <code>    &lt;head></code>
-            <code>      &lt;title></code>
-            <code>         Your Website Name!</code>
-            <code>      &lt;/title></code>
-            <code>      &lt;style></code>
-            <code></code>
-            <code>      &lt;/style></code>
-            <code>    &lt;/head></code>
-            <code>    &lt;body></code>
-            <code>      &lt;h1></code>
-            <code>         Website Name</code>
-            <code>      &lt;/h1></code>
-            <code>      &lt;p></code>
-            <code>         &lt;b></code>
-            <code>           Welcome to my website! On this website I will be sharing____</code>
-            <code>         &lt;/b></code>
-            <code>      &lt;/p></code>
-            <code>      &lt;button></code>
-            <code>        My Blog!</code>
-            <code>      &lt;/button></code>
-            <code>    &lt;/body></code>
-            <code>  &lt;/html></code>
+    <code>&lt;!DOCTYPE html></code>
+    <code>  &lt;html></code>
+    <code>    &lt;head></code>
+    <code>      &lt;title></code>
+    <code>         Your Website Name!</code>
+    <code>      &lt;/title></code>
+    <code>      &lt;style></code>
+    <code></code>
+    <code>      &lt;/style></code>
+    <code>    &lt;/head></code>
+    <code>    &lt;body></code>
+    <code>      &lt;h1></code>
+    <code>         Website Name</code>
+    <code>      &lt;/h1></code>
+    <code>      &lt;p></code>
+    <code>         &lt;b></code>
+    <code>           Welcome to my website! On this website I will be sharing____</code>
+    <code>         &lt;/b></code>
+    <code>      &lt;/p></code>
+    <code>      &lt;button></code>
+    <code>        My Blog!</code>
+    <code>      &lt;/button></code>
+    <code>    &lt;/body></code>
+    <code>  &lt;/html></code>
           </pre>
     </section>
 
@@ -107,31 +107,31 @@
     </p>
     <section class="code">
       <pre>
-            <code>&lt;!DOCTYPE html></code>
-            <code>  &lt;html></code>
-            <code>    &lt;head></code>
-            <code>      &lt;title></code>
-            <code>         Your Website Name!</code>
-            <code>      &lt;/title></code>
-            <code>      &lt;style></code>
-            <code>        p {
-            <code>        }
-            <code>      &lt;/style></code>
-            <code>    &lt;/head></code>
-            <code>    &lt;body></code>
-            <code>      &lt;h1></code>
-            <code>         Website Name</code>
-            <code>      &lt;/h1></code>
-            <code>      &lt;p></code>
-            <code>         &lt;b>
-            <code>           Welcome to my website! On this website I will be sharing____</code>
-            <code>         &lt;/b>
-            <code>      &lt;/p></code>
-            <code>      &lt;button></code>
-            <code>        My Blog!</code>
-            <code>      &lt;/button></code> 
-            <code>    &lt;/body></code>
-            <code>  &lt;/html></code>
+    <code>&lt;!DOCTYPE html></code>
+    <code>  &lt;html></code>
+    <code>    &lt;head></code>
+    <code>      &lt;title></code>
+    <code>         Your Website Name!</code>
+    <code>      &lt;/title></code>
+    <code>      &lt;style></code>
+    <code>        p {</code>
+    <code>        }</code>
+    <code>      &lt;/style></code>
+    <code>    &lt;/head></code>
+    <code>    &lt;body></code>
+    <code>      &lt;h1></code>
+    <code>         Website Name</code>
+    <code>      &lt;/h1></code>
+    <code>      &lt;p></code>
+    <code>         &lt;b></code>
+    <code>           Welcome to my website! On this website I will be sharing____</code>
+    <code>         &lt;/b></code>
+    <code>      &lt;/p></code>
+    <code>      &lt;button></code>
+    <code>        My Blog!</code>
+    <code>      &lt;/button></code> 
+    <code>    &lt;/body></code>
+    <code>  &lt;/html></code>
           </pre>
     </section>
     <p>
@@ -140,31 +140,31 @@
     </p>
     <section class="code">
       <pre>
-            <code>&lt;!DOCTYPE html></code>
-            <code>  &lt;html></code>
-            <code>    &lt;head></code>
-            <code>      &lt;title></code>
-            <code>         Your Website Name!</code>
-            <code>      &lt;/title></code>
-            <code>      &lt;style></code>
-            <code>        p {color: blue
-            <code>        }
-            <code>      &lt;/style></code>
-            <code>    &lt;/head></code>
-            <code>    &lt;body></code>
-            <code>      &lt;h1></code>
-            <code>         Website Name</code>
-            <code>      &lt;/h1></code>
-            <code>      &lt;p></code>
-            <code>         &lt;b>
-            <code>           Welcome to my website! On this website I will be sharing____</code>
-            <code>         &lt;/b>
-            <code>      &lt;/p></code> 
-            <code>      &lt;button></code>
-            <code>        My Blog!</code>
-            <code>      &lt;/button></code>
-            <code>    &lt;/body></code>
-            <code>  &lt;/html></code>
+    <code>&lt;!DOCTYPE html></code>
+    <code>  &lt;html></code>
+    <code>    &lt;head></code>
+    <code>      &lt;title></code>
+    <code>         Your Website Name!</code>
+    <code>      &lt;/title></code>
+    <code>      &lt;style></code>
+    <code>        p {color: blue</code>
+    <code>        }</code>
+    <code>      &lt;/style></code>
+    <code>    &lt;/head></code>
+    <code>    &lt;body></code>
+    <code>      &lt;h1></code>
+    <code>         Website Name</code>
+    <code>      &lt;/h1></code>
+    <code>      &lt;p></code>
+    <code>         &lt;b></code>
+    <code>           Welcome to my website! On this website I will be sharing____</code>
+    <code>         &lt;/b></code>
+    <code>      &lt;/p></code> 
+    <code>      &lt;button></code>
+    <code>        My Blog!</code>
+    <code>      &lt;/button></code>
+    <code>    &lt;/body></code>
+    <code>  &lt;/html></code>
           </pre>
     </section>
     <img src="HTMLCSSImages/image6lesson2.png" alt="Color">
@@ -205,38 +205,38 @@
     </p>
     <section class="code">
       <pre>
-            <code> &lt;!DOCTYPE html></code>
-            <code>  &lt;html></code>
-            <code>    &lt;head></code>
-            <code>      &lt;title></code>
-            <code>         Your Website Name!</code>
-            <code>      &lt;/title></code>
-            <code>      &lt;style></code>
-            <code>       body {
-            <code>          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
-            <code>          color: aliceblue;
-            <code>          background:rgb(211, 211, 211); 
-            <code>       }
-            <code>       p {color: rgb(0, 140, 255)
-            <code>       }
-            <code>       button {
-            <code>          background: rgb(0, 140, 255)
-            <code>          color: white:
-            <code>          border: gray:
-            <code>       }
-            <code>      &lt;/style></code>
-            <code>    &lt;/head></code>
-            <code>    &lt;body></code>
-            <code>      &lt;h1></code>
-            <code>         Website Name</code>
-            <code>      &lt;/h1></code>
-            <code>      &lt;p></code>
-            <code>         &lt;b>
-            <code>           Welcome to my website! On this website I will be sharing____</code>
-            <code>         &lt;/b>
-            <code>      &lt;/p></code>
-            <code>    &lt;/body></code>
-            <code>  &lt;/html></code>
+    <code> &lt;!DOCTYPE html></code>
+    <code>  &lt;html></code>
+    <code>    &lt;head></code>
+    <code>      &lt;title></code>
+    <code>         Your Website Name!</code>
+    <code>      &lt;/title></code>
+    <code>      &lt;style></code>
+    <code>       body {</code>
+    <code>          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';</code>
+    <code>          color: aliceblue;</code>
+    <code>          background:rgb(211, 211, 211); </code>
+    <code>       }</code>
+    <code>       p {color: rgb(0, 140, 255)</code>
+    <code>       }</code>
+    <code>       button {</code>
+    <code>          background: rgb(0, 140, 255)</code>
+    <code>          color: white:</code>
+    <code>          border: gray:</code>
+    <code>       }</code>
+    <code>      &lt;/style></code>
+    <code>    &lt;/head></code>
+    <code>    &lt;body></code>
+    <code>      &lt;h1></code>
+    <code>         Website Name</code>
+    <code>      &lt;/h1></code>
+    <code>      &lt;p></code>
+    <code>         &lt;b></code>
+    <code>           Welcome to my website! On this website I will be sharing____</code>
+    <code>         &lt;/b></code>
+    <code>      &lt;/p></code>
+    <code>    &lt;/body></code>
+    <code>  &lt;/html></code>
           </pre>
     </section>
 
