--- a/htmlcss/html+css3.html
+++ b/htmlcss/html+css3.html
@@ -182,8 +182,8 @@
         </p>
 
         <section class="next-previous-wrapper">
-            <a href="html-course-landing-page.html">&lt; Previous</a>
-            <a href="html+css2.html">Next &gt;</a>
+            <a href="html+css2.html">&lt; Previous</a>
+            <a href="html+css4.html">Next &gt;</a>
         </section>
 
         <nav class="course-nav">
