--- a/htmlcss/html+css3.html
+++ b/htmlcss/html+css3.html
@@ -206,7 +206,7 @@
             <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
         </footer>
 </body>
-<!-- TODO: put the stuff below in the <body> tag -->
+<!-- TODO put the stuff below in the <body> tag -->
 
 <div id="app_settings" style="display:none;">
     <label class='app_text_label'>Chat SiteID: </label>
