--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -401,26 +401,9 @@ Here is the code for the website:
 
 
 
-<p>
-
-</P>
-
-<p>
-
-</P>
-<p>
-
-</P>
-
-
-
-
-
-
-
-
-
-
+<section class="line">
+        .
+</section>
 
     <section class="next-previous-wrapper">
         <a href="html+css6.html">&lt; Previous</a>
@@ -429,13 +412,13 @@ Here is the code for the website:
     <nav class="course-nav">
         <ul>
             <li><a href="html-course-landing-page.html">Introduction</a></li>
-                <li><a href="html+css1.html">Lesson 1</a></li>
-                <li><a href="html+css2.html">Lesson 2</a></li>
-                <li><a href="html+css3.html">Lesson 3</a></li>
-                <li><a href="html+css4.html">Lesson 4</a></li>
-                <li><a href="html+css5.html">Lesson 5</a></li>
-                <li><a href="html+css6.html">Lesson 6</a></li>
-                <li><a href="html+css7.html">Lesson 7</a></li>
+            <li><a href="html+css2.html">Lesson 1</a></li>
+            <li><a href="html+css3.html">Lesson 2</a></li>
+            <li><a href="html+css4.html">Lesson 3</a></li>
+            <li><a href="html+css5.html">Lesson 4</a></li>
+            <li><a href="html+css6.html">Lesson 5</a></li>
+            <li><a href="html+css7.html">Lesson 6</a></li>
+            <li><a href="html+css8.html">Lesson 7</a></li>
         </ul>
     </nav>
 
