--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -20,7 +20,7 @@
     </nav>
 
     <section class="section-1">
-        <h1>HTML + CSS - Lesson 6/h1>
+        <h1>HTML + CSS - Lesson 6</h1>
         <hr class="hr-1">
         <h2>Adding Webpages</h2>
         <p>
@@ -105,7 +105,7 @@ To link the buttons to the other pages.
 
 <pre>
 
-<code> &lt;a href =“webpage.html”>My Blog &lt;/code>
+<code> &lt;a href =“webpage.html”>My Blog</code>
 </pre>
 
 </section>
@@ -300,7 +300,7 @@ The code should look like this: ​
 
 <pre>
 
-<code><link rel="stylesheet" href="style.css"></code>
+<code>&lt;link rel="stylesheet" href="style.css"></code>
 </pre>
 
 </section>
@@ -349,13 +349,13 @@ Now let’s see how this part of our website looks!
     <nav class="course-nav">
         <ul>
             <li><a href="html-course-landing-page.html">Introduction</a></li>
-                <li><a href="html+css1.html">Lesson 1</a></li>
-                <li><a href="html+css2.html">Lesson 2</a></li>
-                <li><a href="html+css3.html">Lesson 3</a></li>
-                <li><a href="html+css4.html">Lesson 4</a></li>
-                <li><a href="html+css5.html">Lesson 5</a></li>
-                <li><a href="html+css6.html">Lesson 6</a></li>
-                <li><a href="html+css7.html">Lesson 7</a></li>
+            <li><a href="html+css2.html">Lesson 1</a></li>
+            <li><a href="html+css3.html">Lesson 2</a></li>
+            <li><a href="html+css4.html">Lesson 3</a></li>
+            <li><a href="html+css5.html">Lesson 4</a></li>
+            <li><a href="html+css6.html">Lesson 5</a></li>
+            <li><a href="html+css7.html">Lesson 6</a></li>
+            <li><a href="html+css8.html">Lesson 7</a></li>
         </ul>
     </nav>
 
