--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -20,9 +20,9 @@
     </nav>
 
     <section class="section-1">
-        <h1>&lt;HTML + CSS - Lesson 4</h1>
-        <hr>&lt; class="hr-1">
-        <h2>&lt;Linking Pages and Buttons</h2>
+        <h1>HTML + CSS - Lesson 4</h1>
+        <hr class="hr-1">
+        <h2>Linking Pages and Buttons</h2>
         <p>
 In this lesson we continue working on the “Home” webpage by using CSS and HTML and laying out the ability to link separate web pages with more buttons. We will also learn how to animate buttons. 
 
@@ -32,7 +32,7 @@ First, we will be adding more buttons and learning to animate them.
 
         </p>
         <p>
-In regards to adding buttons, we learned this in a previous lesson. Under the first < button > < /button > tag, you can simply add to more <button> < /button > tags.
+In regards to adding buttons, we learned this in a previous lesson. Under the first < button > < /button > tag, you can simply add to more < button > < /button > tags.
 
         </p>
         
@@ -43,9 +43,9 @@ I called the other two buttons “Photos” and “About Me”
 
 <pre>
 
-<code>&lt;<button>My Blog</code>
-<code>&lt;<button>Photos</code>
-<code>&lt;<button>About Me</code>
+<code>&lt;button>My Blog</code>
+<code>&lt;button>Photos</code>
+<code>&lt;button>About Me</code>
 </pre>
 
 </section>
@@ -126,6 +126,8 @@ Here is how the button looks without and with the animation effect:
 </p>
 
         <img src="HTMLCSSImages/lesson4p1.png" alt="Buttons Without Animation">
+        <p>
+        </p>>
         <img src="HTMLCSSImages/lesson4p2.png" alt="Buttons With Animations">
 
 
