--- a/htmlcss/html-course-landing-page.html
+++ b/htmlcss/html-course-landing-page.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
+    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
 </head>
 
 <body>
