--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
+    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
+
 </head>
 
 <body>
@@ -196,6 +198,7 @@
             </p>
             <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
         </footer>
+        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
 
