--- a/htmlcss/html+css6.html
+++ b/htmlcss/html+css6.html
@@ -364,6 +364,7 @@ Now let’s see how this part of our website looks!
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
+        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
         <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
     </footer>
 </body>
