--- a/htmlcss/html+css7.html
+++ b/htmlcss/html+css7.html
@@ -427,6 +427,7 @@ Here is the code for the website:
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
+        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
         <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
         
     </footer>
