--- a/htmlcss/html+css4.html
+++ b/htmlcss/html+css4.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
     <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
-
+    <link rel="faviicon" href="../images/NGT_HEADER.png" sizes="18x18">
 </head>
 
 <body>
@@ -156,6 +156,7 @@ Here is how the button looks without and with the animation effect:
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
         <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
+        <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
     </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
