Fix header video

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
         </ul>
     </nav>
     <header class="homepage-header">
+        <div class="video-container">
+            <div class="color"></div>
+            <video playsinline autoplay loop muted poster="images/code_poster.png">
+                <source src="images/code-2.mp4" type="video/mp4">
+            </video>
+        </div>
         <h1>NEXT GEN STEM</h1>
         <p>Leading the next generation of STEM students</p>
         <a href="learntocode.html"><button class="homepage-header-button">Learn to Code</button></a>
     </header>
+
     <section>
         <p class="homepage-p">
             Next Gen STEM is a completely free resource made to
