--- a/htmlcss/html+css1.html
+++ b/htmlcss/html+css1.html
@@ -191,14 +191,15 @@
                 <li><a href="html+css7.html">Lesson 7</a></li>
             </ul>
         </nav>
+        </section>
 
         <footer>
             <p>
                 NEXT GEN STEM <br> CONNECTICUT, USA
             </p>
-            <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+            <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail"
+                    style="width:65px; height:65px"></a>
         </footer>
-        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
 
