--- a/learntocode.html
+++ b/learntocode.html
@@ -32,9 +32,9 @@
         <section>
             <p class="coding-info">
                 Being able to write code is widely considered
-                to be one of the most useful skills in the
-                present day. Technology dominates everyday life
-                from smartphones, to computers, to video games
+                to be one of the most relevant skills in the
+                present day. Technology dominates everyday life,
+                and our smartphones, computers, video games, registers, 
                 and all of these products are united as code
                 is what allows them to function as we know it.
             </p>
@@ -44,21 +44,10 @@
                 including HTML, CSS, Python, and JavaScript.
                 Each language is unique in its own way yet these
                 languages are what allows us to partake in our daily
-                lives! (It is recommended that you begin with the
+                lives! We recommend that you begin with the
                 “HTML + CSS” course if you are a first time coder in
-                order to get a background in web development.)
+                order to get a background in web development.
             </p>
-            <p class="coding-info">
-                Here are the courses:
-            </p>
-            <section class="section-1">
-                <ul>
-                    <li style="color:black;">JavaScript</li>
-                    <li style="color:black;">HTML + CSS</li>
-                    <li style="color:black;">Python</li>
-                    <li style="color:black;" style="margin-bottom: 40px;">Java</li>
-                </ul>
-            </section>
         </section>
     </section>
     <!--Email Button-->
@@ -87,8 +76,8 @@
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
-        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
-        <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail"
+                style="width:65px; height:65px"></a>
     </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
