--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -259,14 +259,16 @@
         <li><a href="html+css7.html">Lesson 7</a></li>
       </ul>
     </nav>
+  </section>
 
-    <footer>
-      <p>
-        NEXT GEN STEM <br> CONNECTICUT, USA
-      </p>
-      <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
-      <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
-    </footer>
+
+  <footer>
+    <p>
+      NEXT GEN STEM <br> CONNECTICUT, USA
+    </p>
+    <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail"
+        style="width:65px; height:65px"></a>
+  </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
 
