--- a/htmlcss/html-course-landing-page.html
+++ b/htmlcss/html-course-landing-page.html
@@ -85,14 +85,14 @@
     <nav class="course-nav">
         <ul>
             <!-- Replace # with html file names of pages -->
-            <li><a href="html-course-landing-page.html">Introduction</a></li>
-            <li><a href="hcss.html1">Lesson 1</a></li>
-            <li><a href="hcss.html2">Lesson 2</a></li>
-            <li><a href="hcss.html3">Lesson 3</a></li>
-            <li><a href="hcss.html4">Lesson 4</a></li>
-            <li><a href="hcss.html5">Lesson 5</a></li>
-            <li><a href="hcss.html6">Lesson 6</a></li>
-            <li><a href="hcss.html7">Lesson 7</a></li>
+               <li><a href="html-course-landing-page.html">Introduction</a></li>
+                <li><a href="html+css1.html">Lesson 1</a></li>
+                <li><a href="html+css2.html">Lesson 2</a></li>
+                <li><a href="html+css3.html">Lesson 3</a></li>
+                <li><a href="html+css4.html">Lesson 4</a></li>
+                <li><a href="html+css5.html">Lesson 5</a></li>
+                <li><a href="html+css6.html">Lesson 6</a></li>
+                <li><a href="html+css7.html">Lesson 7</a></li>
         </ul>
     </nav>
 
