--- a/htmlcss/html+css5.html
+++ b/htmlcss/html+css5.html
@@ -330,8 +330,8 @@ Here is how my webpage looks like:
     </section>
 
     <nav class="course-nav">
-        <ul>
-            <li><a href="html-course-landing-page.html">Introduction</a></li>
+            <ul>
+                <li><a href="html-course-landing-page.html">Introduction</a></li>
                 <li><a href="html+css1.html">Lesson 1</a></li>
                 <li><a href="html+css2.html">Lesson 2</a></li>
                 <li><a href="html+css3.html">Lesson 3</a></li>
@@ -339,15 +339,18 @@ Here is how my webpage looks like:
                 <li><a href="html+css5.html">Lesson 5</a></li>
                 <li><a href="html+css6.html">Lesson 6</a></li>
                 <li><a href="html+css7.html">Lesson 7</a></li>
-        </ul>
-    </nav>
+            </ul>
+        </nav>
+
+    </section>
+
 
     <footer>
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
-               <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail" style="width:65px; height:65px"></a>
-
+        <a href="mailto:thenextgenstem@gmail.com"><img src="../images/Mail-Icon-White-on-Grey.jpg" alt="E-mail"
+                style="width:65px; height:65px"></a>
     </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
