--- a/htmlcss/html+css2.html
+++ b/htmlcss/html+css2.html
@@ -175,7 +175,7 @@
     </p>
     <p>
       Using the same techniques, we can change the font of the website. Under the style tag
-      write body { font-family: r, your code should look like this:
+      write body { font-family:
     </p>
     <p>
       Following this, many a list of many different fonts should come up:
